--- a/app/src/main/res/layout/trangchu1.xml
+++ b/app/src/main/res/layout/trangchu1.xml
@@ -511,18 +511,19 @@
 
                         <TextView
                             android:id="@+id/activity_menu_sl"
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
+                            android:layout_width="21dp"
+                            android:layout_height="21dp"
                             android:layout_gravity="top|end"
-                            android:layout_marginTop="2dp"
-                            android:layout_marginEnd="-4dp"
+                            android:layout_marginTop="0dp"
+                            android:layout_marginEnd="0dp"
                             android:background="@drawable/badge_background"
                             android:gravity="center"
                             android:text="0"
-                            android:textColor="@color/black"
+                            android:textColor="#FF000000"
                             android:textSize="14sp"
                             android:textStyle="bold"
-                            android:padding="2dp" />
+                            android:includeFontPadding="false"
+                            android:padding="2dp"/>
                     </FrameLayout>
 
                     <TextView
