--- a/app/src/main/res/drawable/badge_background.xml
+++ b/app/src/main/res/drawable/badge_background.xml
@@ -1,4 +1,9 @@
+<!-- res/drawable/badge_background.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#FFFFFF"/>
+    <solid android:color="#FFFFFF" /> <!-- Màu nền trắng -->
+    <stroke
+        android:width="1dp"
+        android:color="#000000" /> <!-- Viền đen -->
+    <corners android:radius="10dp" /> <!-- Bo tròn góc -->
 </shape>
